# ImgResizer

./: ArgParser.h  CMakeLists.txt  Dockerfile  FileManager.cpp  FileManager.h  ImgResizer.cpp  ImgResizer.h  README.md  config.json  main.cpp
include/: ArgParser.h  CoreOperations.h  ImgResizer.h
